# python-tests

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
api_lab/: api.py  pyproject.toml  requirements.txt
aws_bedrock/: example_request1.ipynb  example_request2.ipynb  on_demand_models.py
aws_dynamodb_sqs/: insert_update_dynamodb.ipynb  pull_delete_sqs_obj.ipynb  pull_sqs_items.ipynb
bamboohr_api_people_tests/: .env.example  .gitignore  bamboo_api_client.ipynb  bamboo_api_client_fixed.ipynb  bamboo_api_client_tests.ipynb  bamboo_api_client_trial.ipynb  bamboohr_mocked_server.py  encryption_example.ipynb  people_requests.ipynb  s3_helper.ipynb  sample_api_client.ipynb
bamboohr_api_people_tests/data/: account_info_fields.json  account_list_users.json  company_information.json  custom_report_test.json  custom_reports_list.json  employees.json  employees_changed.json  time_off_requests.json  time_off_types.json  time_off_whos_out.json
notebooks/: airbyte_delete_connections.ipynb  airbyte_delete_sources.ipynb  airbyte_get_connections.ipynb  airbyte_get_financial_events_conns_list.ipynb  airbyte_update__sp_api_sources.ipynb  aws_s3_file_syncher.ipynb  aws_secrets_marked_for_deletion.ipynb  aws_secrets_test.ipynb  big_query_conn.ipynb  big_query_conn2.ipynb  bq-lau-check.ipynb  clean_col_names.ipynb  clean_list_with_other_list.ipynb  converter_to_mp4.ipynb  copy_files_source_target.ipynb  create_schema_parquet_file.ipynb  delete_files_in_directory.ipynb  delete_s3_files_by_report_name.ipynb  delete_s3_files_by_stuff.ipynb  delete_s3_files_date_range.ipynb  delete_s3_files_in_list.ipynb  delete_s3_files_keys.ipynb  delta_delete_condition.ipynb  delta_merge.ipynb  dict_test.ipynb  drop_columns_fn.ipynb  encoding_issues.ipynb  explode_test.ipynb  explode_test2.ipynb  file_renamer.ipynb  filter_dict_example.ipynb  flexport_shipments.ipynb  google_sheets_configs.yaml  insta_check.ipynb  instagram-followers-and-followees.ipynb  json_count_app.ipynb  json_response.ipynb  list_to_lower.ipynb  max_winfunct_example.ipynb  netsuite_saved_searches_pagination.ipynb  (+26 more)
payclip_people_tests/: bamboo_api_development.ipynb  bamboohr_mocked_server.py
scripts/: add_non_stock_days.ipynb  airbyte_delete_connections.ipynb  aws_secrets_marked_for_deletion.ipynb  aws_secrets_test.ipynb  big_query_conn.ipynb  big_query_conn2.ipynb  bq-lau-check.ipynb  check_airbyte_conn.ipynb  clean_list_with_other_list.ipynb  copy_files_s3.ipynb  create_schema_parquet_file.ipynb  date_test.ipynb  delete_files_in_directory.ipynb  delete_s3_files_by_stuff.ipynb  delete_s3_files_date_range.ipynb  delete_s3_files_keys.ipynb  delta_delete_condition.ipynb  dict_test.ipynb  drop_columns_fn.ipynb  ecosystem_sim.py  encoding_issues.ipynb  environment_selection_input.py  exchange_rates_transform.ipynb  explode_test.ipynb  explode_test2.ipynb  filter_dict_example.ipynb  flatten_json_spark.ipynb  flexport_shipments.ipynb  get_secrets.ipynb  insert_update_dynamodb.ipynb  insta_check.ipynb  instagram-followers-and-followees.ipynb  json_count_app.ipynb  json_response.ipynb  max_winfunct_example.ipynb  mkv_fixer_paths.py  output_file.py  pendulum_test.ipynb  read_delta_write_json.ipynb  read_json.ipynb  (+14 more)
scripts/dynamodb_sqs/: check_sqs_items.ipynb  handlers.py
sh_scripts/: delete_all_venvs.sh
slack_channel_configs/: config.yaml
spark-lab/delta-lab/: delta-try.ipynb
spark-lab/learning-spark/: create-db.ipynb  spark-sql.ipynb  write-json.ipynb
spark-lab/mnm_playground/: mnm.ipynb
tests-scripts/: Skai POC test.ipynb  add_non_stock_days.ipynb  airbyte_file_converter.ipynb  aws_save_credentials.py  copy_files_s3.ipynb  date_test.ipynb  delete_from_s3.ipynb  exchange_rates_transform.ipynb  flatten_json_spark.ipynb  forward_fill.ipynb  get_path.py  json_read_test.ipynb  lab.ipynb  landing-reprocessor-date-range.ipynb  landing_spapi_defective_csv_files_reprocessor.ipynb  landing_spapi_defective_tsv_files_reprocessor.ipynb  landing_spapi_restock_defective_tsv_files_reprocessor.ipynb  local-landingFileProcessor-execution.ipynb  multi_session_copy_between_buckets.py  read_json_checks.ipynb  redshift_conn_airflow_gen.ipynb  s3_buckets_delete_items_by_dt_ec2.py  s3_copy_files_landing.ipynb  skai.ipynb  sp_api_files_converter.ipynb  spapi_defective_files_reprocessor.ipynb  str_to_list_elements_lab.ipynb  test_.ipynb  test_df_col_rename.ipynb  test_fix_tsv.ipynb  test_fn_date_as_parameter.ipynb  test_format_nbrs.ipynb  test_get_list_env_var.ipynb  test_prefix.ipynb  test_read_json.ipynb  test_read_parquet.ipynb  test_read_with_encoding.ipynb  test_reverse_find.ipynb  test_rstrip.ipynb  test_value_none_dict.ipynb  (+2 more)
yaml_template_test/: output.yaml  template.yaml.j2  test.ipynb
(+224 files in other folders)
