[tool.poetry]
name = "python-tests"
version = "0.1.0"
description = "Tests and prototyping coded in python"
authors = ["Emiliano Frigo"]

package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
pytz = "^2022.1"
pyspark = ">=3.3.1"
scipy = "^1.9.1"
scikit-learn = "^1.1.2"
SQLAlchemy = "^1.4.41"
types-pytz = "^2022.7.0.0"
pyarrow = ">=14.0.2"
progressbar2 = "^4.3.2"
instaloader = "^4.14"
faker = "^33.3.0"
flask = "^3.1.0"
delta = "^0.4.2"
delta-spark = "^3.3.0"
black = { extras = ["jupyter"], version = "^24.10.0" }
jupyter-black = "^0.4.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = ">=24.0.0"
boto3 = "^1.24.48"
flake8 = "^6.0.0"
mypy = "^1.0.0"
mypy-extensions = "^0.4.3"
pgmock = "^1.3.7"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-datadir = "^1.3.1"
pytest-mock = "^3.8.2"
reorder-python-imports = "^3.8.2"
isort = "^5.10.1"
pylint = "^2.12.2"
pre-commit = "^2.16.0"
ipykernel = "^6.6.0"
bump2version = "^1.0.1"
ffmpeg = "^1.4"
ffmpeg-python = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
